# graphql-sdl

./: README.md  dune-project  graphql-sdl.opam  shell.nix
lib/: ast.ml  dune  graphql_schema_lexer.mll  graphql_schema_parser.mly  graphql_schema_printer.ml  graphql_sdl.ml  graphql_sdl_tester.ml
nix/: default.nix  sources.nix
test/: dune  schema_parser_test.ml  test_schema_parser.ml
