opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/graphql-sdl-parser"
bug-reports: "https://github.com/anmonteiro/graphql-sdl-parser/issues"
dev-repo: "git+https://github.com/anmonteiro/graphql-sdl-parser.git"
doc: "https://anmonteiro.github.io/graphql-sdl-parser/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "dune" {>= "1.8"}
  "menhir"
]
